make code molular and add test
